--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
 <h1>クイズ</h1>
-<p><span class="under">ランダムに５問クイズが出題され、最後にスコアが表示されます。</span></p>
+<p><span class="under">ランダムに５問クイズが出題され、最後にスコアが表示されます。</br>
+クイズはジブリアニメから出題しています。</span></p>
 
 <section class="container">
 <p id="question"></p>
